<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.wit.mobileapp.spotmebro.Sign_up">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="Sign Up"
            android:textAlignment="center"
            android:fontFamily="serif"
            android:textColor="@android:color/black"
            android:textSize="30sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="50"
                android:text="Email"
                android:fontFamily="serif"
                android:textColor="@android:color/black" />


            <EditText
                android:id="@+id/Email_input"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="50"
                android:ems="10"
                android:text=""
                android:fontFamily="serif"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="50"
                android:text="Name"
                android:fontFamily="serif"
                android:textColor="@android:color/black"/>


            <EditText
                android:id="@+id/Name_Input"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="50"
                android:ems="10"
                android:fontFamily="serif"
                android:textColor="@android:color/black"
                android:text="" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="serif"
                android:textColor="@android:color/black"
                android:text="Password:" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:layout_marginLeft="44dp"
                    android:id="@+id/Password_input"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="8dp"
                    android:fontFamily="serif"
                    android:textColor="@android:color/black"
                    android:layout_weight="50"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1100"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="Password Verification:"
                android:fontFamily="serif"
                android:textColor="@android:color/black"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleDrawable="@drawable/password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/Verify_input"
                    android:layout_width="215dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="8dp"
                    android:layout_weight="50"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="1100"
            android:fontFamily="serif"
            android:textColor="@android:color/black"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="serif"
                android:textColor="@android:color/black"
                android:text="Passwords must be a minimum of six characters!"
                android:textSize="12sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:fontFamily="serif"
                android:text="Security Question:"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/Security_input"
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="0dp"
                android:layout_weight="100"
                android:dropDownSelector="#aadaff"
                android:ems="10"
                android:entries="@array/security_arrays"
                android:prompt="@string/security_prompt" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textColor="@android:color/black"
                android:layout_gravity="left"
                android:layout_weight="50"
                android:text="Answer" />

            <EditText
                android:id="@+id/Answer_input"
                android:layout_width="121dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:fontFamily="serif"
                android:textColor="@android:color/black"
                android:layout_marginTop="0dp"
                android:layout_weight="50"
                android:ems="10"
                android:text="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp">
            <TextView
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:fontFamily="serif"
                android:textColor="@android:color/black"
                android:layout_gravity="left"
                android:text="Your Gender:" />

            <Spinner
                android:id="@+id/my_gender"
                android:layout_width="139dp"
                android:layout_height="43dp"
                android:layout_gravity="right"
                android:layout_marginTop="0dp"
                android:layout_weight="50"
                android:dropDownSelector="#aadaff"
                android:ems="10"
                android:entries="@array/my_gender_array"
                android:prompt="@string/gender_prompt" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User's Preferences:"
            android:fontFamily="serif"
            android:textColor="@android:color/black"
            android:layout_marginLeft="16dp"/>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:layout_marginLeft="16dp">

            <TextView
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:textColor="@android:color/black"
                android:layout_gravity="left"
                android:text="Style" />

            <Spinner
                android:id="@+id/Style_Input"
                android:layout_width="155dp"
                android:layout_height="43dp"
                android:layout_gravity="right"
                android:layout_marginTop="0dp"
                android:layout_weight="50"
                android:dropDownSelector="#aadaff"
                android:ems="10"
                android:entries="@array/style_array"
                android:prompt="@string/Style_prompt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginLeft="16dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:orientation="horizontal">

            <TextView
                android:layout_width="34dp"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:fontFamily="serif"
                android:textColor="@android:color/black"
                android:layout_weight="50"
                android:text="Preferred Gender" />

            <Spinner
                android:id="@+id/Preferred_Gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="0dp"
                android:layout_weight="50"
                android:dropDownSelector="#aadaff"
                android:ems="10"
                android:entries="@array/gender_array"
                android:prompt="@string/Pref_gender_prompt" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/Submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="8dp"
        android:text="Sign up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>
